# recipe_hud

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/recipehud/: __main__.py  backup.py  config.py  db.py  extractor.py  idle.py  input_watch.py  log_buffer.py  main.py  models.py  schema.sql  settings_store.py  sysinfo.py  timer_engine.py  wine.py  ws.py
backend/recipehud/api/: auth.py  debug.py  display.py  recipe.py  send.py  settings.py  sites.py  system.py  timers.py  weather.py
backend/recipehud/display_ctl/: __init__.py  base.py  mock.py  wlopm.py  x11.py
deploy/: install.sh  update.sh
deploy/kiosk/: chromium-flags.txt  start-kiosk.sh
deploy/labwc/: autostart.snippet  kanshi.config.snippet  rc.xml.snippet
deploy/systemd/: recipehud-backend.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md
extension/: manifest.json  offscreen.html  offscreen.js  sw.js
extension/content/: overlay.js
frontend/admin/: admin.css  admin.js  index.html
frontend/launcher/: index.html  launcher.css  launcher.js
frontend/recipe/: drag-scroll.js  index.html  recipe.css  recipe.js  scale.js
frontend/send/: index.html  send.css  send.js
frontend/shared/: theme.css  ws-client.js
scripts/: dev.ps1  make_alarm.py  screenshots.py  seed_db.py  test_extraction.py  test_scale.py  ws_smoke.py
