[project]
name = "recipehud"
version = "0.1.0"
description = "Kitchen recipe display kiosk: launcher, timers, clean recipe view, admin panel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "recipe-scrapers>=14.0",
    "readability-lxml>=0.8.1",
    "segno>=1.6",
    "evdev>=1.6; sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
recipehud = ["schema.sql"]
